--- a/.github/workflows/buildMacOS.yml
+++ b/.github/workflows/buildMacOS.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Build Everything
       run: |
         dotnet --info
-        dotnet publish Tests -c DebugUnix64 -r osx-x64 -o Tests/bin/osx64 --self-contained true
+        dotnet publish Emotion.ExecTest -c DebugUnix64 -r osx-x64 --self-contained true
     #- name: Run Tests
     #  run: |
     #    cd ./Tests/bin/osx64
