--- a/Emotion.Plugins.Steamworks/Emotion.Plugins.Steamworks.csproj
+++ b/Emotion.Plugins.Steamworks/Emotion.Plugins.Steamworks.csproj
@@ -2,7 +2,8 @@
 
     <PropertyGroup>
         <OutputType>Library</OutputType>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
+        <Platforms>AnyCPU;x64</Platforms>
     </PropertyGroup>
 
     <ItemGroup>
