--- a/Emotion/Emotion.csproj
+++ b/Emotion/Emotion.csproj
@@ -108,8 +108,18 @@
     <Optimize>True</Optimize>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Game\World2D\SceneControl\World2DBaseScene.cs" />
+    <Compile Remove="Game\World3D\SceneControl\World3DBaseScene.cs" />
+    <Compile Remove="Game\World\SceneControl\WorldBaseScene.cs" />
+    <Compile Remove="Testing\NewUITests.cs" />
     <Compile Remove="Testing\Templates\EmptyTestSceneTemplate.cs" />
     <Compile Remove="Testing\Templates\EmptyTestTemplateClass.cs" />
+    <Compile Remove="Testing\TestExecutor.cs" />
+    <Compile Remove="Testing\TestingScene.cs" />
+    <Compile Remove="Testing\TestingUtility.cs" />
+    <Compile Remove="Testing\TestWaiterRunLoops.cs" />
+    <Compile Remove="WIPUpdates\NewUIUpdate\UIUpdateDemoScene.cs" />
+    <Compile Remove="WIPUpdates\TextUpdate\TextUpdateDemoScene.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Assets\FontShaders\GenerateSDF.frag" />
@@ -312,8 +322,18 @@
     <EmbeddedResource Include="Assets\Shaders\SSAA.xml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Game\World2D\SceneControl\World2DBaseScene.cs" />
+    <None Include="Game\World3D\SceneControl\World3DBaseScene.cs" />
+    <None Include="Game\World\SceneControl\WorldBaseScene.cs" />
+    <None Include="Testing\NewUITests.cs" />
     <None Include="Testing\Templates\EmptyTestSceneTemplate.cs" />
     <None Include="Testing\Templates\EmptyTestTemplateClass.cs" />
+    <None Include="Testing\TestExecutor.cs" />
+    <None Include="Testing\TestingScene.cs" />
+    <None Include="Testing\TestingUtility.cs" />
+    <None Include="Testing\TestWaiterRunLoops.cs" />
+    <None Include="WIPUpdates\NewUIUpdate\UIUpdateDemoScene.cs" />
+    <None Include="WIPUpdates\TextUpdate\TextUpdateDemoScene.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Silk.NET.Assimp" Version="2.20.0" Condition="$(DefineConstants.Contains('ASSIMP'))" />
