--- a/Emotion.Test/Emotion.Test.csproj
+++ b/Emotion.Test/Emotion.Test.csproj
@@ -7,6 +7,7 @@
         <ApplicationIcon></ApplicationIcon>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <StartupObject />
+        <Platforms>x86;x64</Platforms>
     </PropertyGroup>
 
     <ItemGroup>
